--- a/app/pay.html
+++ b/app/pay.html
@@ -12,9 +12,9 @@
     <link type="text/css" href="css/pay.css" rel="stylesheet">
 </head>
 <body class="container-fluid top-control">
-<section class="row">
+<section class="row text-center">
     <div class="col-lg-12">
-        <section class="text-center">
+        <section>
             <img class="circle-head-big" src="img/head.jpg"/>
             <div class="row-height">
                 <span class="title-name">西蒙的咖啡店</span>
@@ -22,7 +22,7 @@
                     <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
                     <span>菲律宾五号花园街道</span>
                 </div>
-                <div class="text-center">
+                <div>
                     <ul class="bottomControl">
                         <li  class="star-bg-full"></li>
                         <li  class="star-bg-full"></li>
@@ -35,32 +35,32 @@
         </section>
         <div class="hr-line"></div>
         <br/>
-        <div class="top-control-50 text-center">
+        <div class="top-control-50">
             <div class="input-group" id="acc-input-box">
                 <input type="number" class="form-control" placeholder="请输入您的金额" aria-describedby="basic-addon2" onkeyup="amountChange(this)">
                 <span class="php-big-circle" onclick="alert('12')">PHP</span>
             </div>
         </div>
 
-        <div class="rmb-font text-center">
+        <div class="rmb-font ">
             <span>当前货币汇率1</span>
             <span class="php-small-circle">PHP</span>
             <span>= 7.5689 </span>
             <span> RMB</span>
         </div>
 
-        <div class="text-center top-control-50">
+        <div class="top-control-50">
             <span class="big-font">产生手续费用:<money class="money-icon">￥</money></span>
             <span class="big-font bottom-bord-black">7.8363</span>
         </div>
-        <div class="text-center top-control-80">
+        <div class="top-control-80">
             <label class="big-font-50 count-amount">总计金额:</label>
         </div>
-        <section class="text-center top-control-100" id="amountNumber">
+        <section class="top-control-150" id="amountNumber">
             <money class="big-font-120 money-icon">￥</money>
-            <span class="big-font-120 bottom-bord-weight count-amount">211155117.51</span>
+            <span class="big-font-120 bottom-bord-black count-amount">217.51</span>
         </section>
-        <div class="text-center top-control-100">
+        <div class="top-control-150">
             <a href="javascript:void(0)" class="big-font-50 big-button-blue">
                     立即支付</a>
         </div>
