成功页面制作

--- a/app/payDiscuss.html
+++ b/app/payDiscuss.html
@@ -72,8 +72,7 @@
             <section class="box">
                 <div class="left_box"></div>
                 <div class="center_box">
-                    <textarea class="text-left" value="" id="description" maxlength="40" placeholder="输入你想说的话">
-                    </textarea>
+                    <textarea class="text-left" id="description" maxlength="40" placeholder="输入你想说的话"></textarea>
                     <div class="big-font-50 box">
                         <div class="left_box text-left">
                             <span class="fileinput-button">
