--- a/app/paySuccess.html
+++ b/app/paySuccess.html
@@ -2,21 +2,88 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>支付失败</title>
+    <title>支付成功</title>
     <link type="text/css" href="css/bootstrap.css" rel="stylesheet"/>
     <link type="text/css" href="css/bootstrap-combined.min.css" rel="stylesheet"/>
     <link type="text/css" href="css/bootstrap-theme.css" rel="stylesheet"/>
     <script type="text/javascript" src="lib/jquery-2.0.0.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap.js"></script>
+    <script type="text/javascript" src="lib/min.slip.js"></script>
     <script type="text/javascript" src="js/pay.js"></script>
     <link type="text/css" href="css/pay.css" rel="stylesheet">
 </head>
 <body class="container-fluid top-control">
 <section class="row">
     <div class="col-lg-12">
-        <section class="text-center">
-
+        <section class="text-center top-control-80">
+            <img src="img/yes.png">
+            <br/><br/><br/>
+            <span class="font-weight-bold big-font-35">支付成功！</span>
+            <br/><br/><br/><br/>
+            <span class="count-amount big-font-90">27.51<span class="big-font text-color-y">PHP</span></span>
+            <br/><br/><br/><br/>
+            <div>
+                <a href="javaScript:void(0);" class="empty-btn-s"> 评一下 </a>
+                <span class="text-color-g-b big-font-35 glyphicon glyphicon-pencil"></span>
+            </div>
         </section>
+        <br/>
+        <div class="hr-height-tip top-control">
+            <span>客户精选</span>
+        </div>
+        <br>
+        <section class="box-2">
+            <div class="left_box-2"></div>
+            <div class="center_box-2">
+                <div id="slip" class="list-content">
+                    <section class="recommend-box">
+                        <div class="recommend-box-content">
+                            <span class="recommend-box-title">$4564</span>
+                           <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-3.jpg"></a>
+                        </div>
+                       <title-box class="font-weight-bold">海洋公园</title-box>
+                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                    </section>
+                    <section class="recommend-box">
+                        <div class="recommend-box-content">
+                            <span class="recommend-box-title">$4564</span>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-4.jpg"></a>
+                        </div>
+                        <title-box class="font-weight-bold">海洋公园</title-box>
+                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                    </section>
+                    <section class="recommend-box">
+                        <div class="recommend-box-content">
+                            <span class="recommend-box-title">$4564</span>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-4.jpg"></a>
+                        </div>
+                        <title-box class="font-weight-bold">海洋公园</title-box>
+                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                    </section>
+                    <section class="recommend-box">
+                        <div class="recommend-box-content">
+                            <span class="recommend-box-title">$4564</span>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-4.jpg"></a>
+                        </div>
+                        <title-box class="font-weight-bold">海洋公园</title-box>
+                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                    </section>
+                    <section class="recommend-box">
+                        <div class="recommend-box-content">
+                            <span class="recommend-box-title">$4564</span>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-4.jpg"></a>
+                        </div>
+                        <title-box class="font-weight-bold">海洋公园</title-box>
+                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                    </section>
+                </div>
+            </div>
+            <div class="right_box-2"></div>
+        </section>
+        <br/>
+        <div class="hr-height-tip">
+            <span>点评</span>
+        </div>
     </div>
 </section>
 </body>
