--- a/app/paySuccess.html
+++ b/app/paySuccess.html
@@ -32,9 +32,7 @@
             <span>客户精选</span>
         </div>
         <br>
-        <section class="box-2">
-            <div class="left_box-2"></div>
-            <div class="center_box-2">
+
                 <div id="slip" class="list-content">
                     <section class="recommend-box">
                         <div class="recommend-box-content">
@@ -55,7 +53,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-4.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-5.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
@@ -63,7 +61,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-4.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
@@ -71,15 +69,46 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-4.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
+                        </div>
+                        <title-box class="font-weight-bold">海洋公园</title-box>
+                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                    </section>
+                    <section class="recommend-box">
+                        <div class="recommend-box-content">
+                            <span class="recommend-box-title">$4564</span>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
+                        </div>
+                        <title-box class="font-weight-bold">海洋公园</title-box>
+                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                    </section>
+                    <section class="recommend-box">
+                        <div class="recommend-box-content">
+                            <span class="recommend-box-title">$4564</span>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
+                        </div>
+                        <title-box class="font-weight-bold">海洋公园</title-box>
+                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                    </section>
+                    <section class="recommend-box">
+                        <div class="recommend-box-content">
+                            <span class="recommend-box-title">$4564</span>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
+                        </div>
+                        <title-box class="font-weight-bold">海洋公园</title-box>
+                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                    </section>
+                    <section class="recommend-box">
+                        <div class="recommend-box-content">
+                            <span class="recommend-box-title">$4564</span>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
                     </section>
                 </div>
             </div>
-            <div class="right_box-2"></div>
-        </section>
+
         <br/>
         <div class="hr-height-tip">
             <span>点评</span>
