--- a/app/paySuccess.html
+++ b/app/paySuccess.html
@@ -6,22 +6,23 @@
     <link type="text/css" href="css/bootstrap.css" rel="stylesheet"/>
     <link type="text/css" href="css/bootstrap-combined.min.css" rel="stylesheet"/>
     <link type="text/css" href="css/bootstrap-theme.css" rel="stylesheet"/>
+    <link type="text/css" href="css/animate.css" rel="stylesheet"/>
     <script type="text/javascript" src="lib/jquery-2.0.0.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap.js"></script>
     <script type="text/javascript" src="lib/min.slip.js"></script>
     <script type="text/javascript" src="js/pay.js"></script>
     <link type="text/css" href="css/pay.css" rel="stylesheet">
 </head>
-<body class="container-fluid top-control">
+<body class="container-fluid top-control" onload="slipInit(0)">
 <section class="row">
     <div class="col-lg-12">
         <section class="text-center top-control-80">
             <img src="img/yes.png">
             <br/><br/><br/>
             <span class="font-weight-bold big-font-35">支付成功！</span>
-            <br/><br/><br/><br/>
+            <br/><br/><br/>
             <span class="count-amount big-font-90">27.51<span class="big-font text-color-y">PHP</span></span>
-            <br/><br/><br/><br/>
+            <br/><br/><br/>
             <div>
                 <a href="javaScript:void(0);" class="empty-btn-s"> 评一下 </a>
                 <span class="text-color-g-b big-font-35 glyphicon glyphicon-pencil"></span>
@@ -32,88 +33,168 @@
             <span>客户精选</span>
         </div>
         <br>
-
+        <div class="box-2">
+            <div class="left_box-2"></div>
+            <div class="center_box-2">
                 <div id="slip" class="list-content">
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title">$4564</span>
-                           <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-3.jpg"></a>
+                            <span class="recommend-box-title-y">$4564</span>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-3.jpg"></a>
                         </div>
-                       <title-box class="font-weight-bold">海洋公园</title-box>
-                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                        <title-box class="font-weight-bold">海洋公园</title-box>
+                        <div><span class="text-color-g big-font-25" >旅游景点</span></div>
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title">$4564</span>
+                            <span class="recommend-box-title-y">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-4.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
-                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                        <div><span class="text-color-g big-font-25" >旅游景点</span></div>
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title">$4564</span>
+                            <span class="recommend-box-title-y">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-5.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
-                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                        <div><span class="text-color-g big-font-25" >旅游景点</span></div>
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title">$4564</span>
+                            <span class="recommend-box-title-y">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
-                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                        <div><span class="text-color-g big-font-25" >旅游景点</span></div>
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title">$4564</span>
+                            <span class="recommend-box-title-y">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
-                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                        <div><span class="text-color-g big-font-25" >旅游景点</span></div>
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title">$4564</span>
+                            <span class="recommend-box-title-y">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
-                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                        <div><span class="text-color-g big-font-25" >旅游景点</span></div>
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title">$4564</span>
+                            <span class="recommend-box-title-y">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
-                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                        <div><span class="text-color-g big-font-25" >旅游景点</span></div>
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title">$4564</span>
+                            <span class="recommend-box-title-y">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
-                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                        <div><span class="text-color-g big-font-25" >旅游景点</span></div>
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title">$4564</span>
+                            <span class="recommend-box-title-y">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
-                        <div><span class="text-color-g" style="font-size: 25px">旅游景点</span></div>
+                        <div><span class="text-color-g big-font-25" >旅游景点</span></div>
                     </section>
                 </div>
             </div>
-
+            <div class="right_box-2"></div>
+        </div>
         <br/>
         <div class="hr-height-tip">
             <span>点评</span>
         </div>
     </div>
+    <div class="m-row discuss-box-border">
+        <div class="m-col-sm-3">
+            <img class="circle-head-small sm-head-s" src="img/head.jpg"/>
+        </div>
+        <div class="m-col-sm-6">
+            <span class="big-font-30 font-weight-bold">山边的一只小龙虾</span><br/>
+            <ul class="bottomControl-small">
+                <li class="star-sm-full"></li>
+                <li class="star-sm-full"></li>
+                <li class="star-sm-full"></li>
+                <li class="star-sm-empty"></li>
+                <li class="star-sm-empty"></li>
+            </ul>
+            <br>
+            <p class="discuss-text-show">
+                这次的大海很漂亮，我很喜欢。出了咖啡店就可以库弹道大海了，大海很漂亮，可以看到漂亮的贝壳~
+            </p>
+            <div class="discuss-box-img">
+                <img class="pic-bg-cell " src="img/timg.jpg">
+                <img class="pic-bg-cell" src="img/timg1.jpg">
+                <img class="pic-bg-cell" src="img/timg2.jpg">
+            </div>
+            <br/>
+        </div>
+    </div>
+    <div class="m-row discuss-box-border">
+        <div class="m-col-sm-3">
+            <img class="circle-head-small sm-head-s" src="img/head.jpg"/>
+        </div>
+        <div class="m-col-sm-6">
+            <span class="big-font-30 font-weight-bold">山边的一只小龙虾</span><br/>
+            <ul class="bottomControl-small">
+                <li class="star-sm-full"></li>
+                <li class="star-sm-full"></li>
+                <li class="star-sm-full"></li>
+                <li class="star-sm-empty"></li>
+                <li class="star-sm-empty"></li>
+            </ul>
+            <p class="discuss-text-show top-control">
+                这次的大海很漂亮，我很喜欢。出了咖啡店就可以库弹道大海了，大海很漂亮，可以看到漂亮的贝壳~
+            </p>
+            <div class="discuss-box-img">
+                <img class="pic-bg-cell " src="img/timg.jpg">
+                <img class="pic-bg-cell" src="img/timg1.jpg">
+                <img class="pic-bg-cell" src="img/timg2.jpg">
+            </div>
+        </div>
+    </div>
 </section>
+<div class="mask" id="gift">
+    <div  class="viewport-flip dilog-center" title="点击翻面">
+        <div id="face" class="list flip out">
+            <div class="red-package">
+                <span class="red-package-amount">
+                    <p>恭喜获得
+                        <span class="big-font-50">￥1.35!</span>
+                    </p>
+                    <p class="text-right form-txt-setting">
+                        来自XXXX
+                    </p>
+                </span>
+                <img src="./img/open.png" />
+            </div>
+
+            <div class="top-control-150 text-center">
+                <a href="javascript:void(0)" onclick="closeBox()"> <img src="img/close.png"></a>
+            </div>
+        </div>
+        <div id="opposite" class="list flip in">
+            <img src="./img/box.png" />
+            <div class="top-control-150 text-center">
+                <a href="javascript:void(0)" onclick="flipClick()" class="big-font-50 big-button-yellow">
+                    打开你的红包</a>
+            </div>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
