--- a/app/payFail.html
+++ b/app/payFail.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="lib/min.slip.js"></script>
     <script type="text/javascript" src="js/pay.js"></script>
     <link type="text/css" href="css/pay.css" rel="stylesheet">
+    <meta name="viewport" content="target-densitydpi=device-dpi, width=910px, user-scalable=no">
 </head>
 <body class="container-fluid top-control" onload="slipInit(1)">
 <section class="row">
@@ -24,7 +25,7 @@
                 您无法支付您的账单，因为您的手机无法连接到网络
             </span>
             <br/><br/><br/><br/><br/><br/><br/>
-            <br/><br/><br/><br/>
+            <br/><br/>
             <div class="top-control-150">
                 <a href="javascript:void(0)" class="big-font-50 big-button-blue">
                     再次尝试</a>
