--- a/app/paySuccess.html
+++ b/app/paySuccess.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="lib/min.slip.js"></script>
     <script type="text/javascript" src="js/pay.js"></script>
     <link type="text/css" href="css/pay.css" rel="stylesheet">
+    <meta name="viewport" content="target-densitydpi=device-dpi, width=910px, user-scalable=no">
 </head>
 <body class="container-fluid top-control" onload="slipInit(0)">
 <section class="row">
@@ -131,7 +132,6 @@
                 <li class="star-sm-empty"></li>
                 <li class="star-sm-empty"></li>
             </ul>
-            <br>
             <p class="discuss-text-show">
                 这次的大海很漂亮，我很喜欢。出了咖啡店就可以库弹道大海了，大海很漂亮，可以看到漂亮的贝壳~
             </p>
@@ -173,6 +173,7 @@
             <div class="red-package">
                 <span class="red-package-amount">
                     <p>恭喜获得
+                        <!--Java前端代码填充-->
                         <span class="big-font-50">￥1.35!</span>
                     </p>
                     <p class="text-right form-txt-setting">
