--- a/app/payDiscuss.html
+++ b/app/payDiscuss.html
@@ -14,7 +14,7 @@
 </head>
 <body class="container-fluid top-control">
 <section class="row">
-    <form class="col-lg-12">
+    <form class="col-lg-12" action="" method="post" id="discussForm" name="discussForm">
         <div class="row">
             <div class="content-left row-div">
                 <img class="circle-head-big" src="img/head.jpg"/>
@@ -93,7 +93,7 @@
                 <div class="right_box"></div>
             </section>
             <div class="top-control-80 ">
-                <a href="javascript:void(0)" class="big-font-50 big-button-blue">
+                <a href="javascript:void(0)" onclick="submit('discussForm')" class="big-font-50 big-button-blue">
                     上传评论</a>
             </div>
             <br/>
