--- a/app/pay.html
+++ b/app/pay.html
@@ -39,7 +39,7 @@
         <div class="top-control-50">
             <div class="input-group" id="acc-input-box">
                 <input type="number" class="form-control" placeholder="请输入您的金额" aria-describedby="basic-addon2" onkeyup="amountChange(this)">
-                <span class="php-big-circle" onclick="alert('12')">PHP</span>
+                <span class="php-big-circle">PHP</span>
             </div>
         </div>
 
@@ -58,7 +58,7 @@
             <label class="big-font-50 count-amount">总计金额:</label>
         </div>
         <!-- 当金额长度大于10时 切换用big-font-90 -->
-        <section class="top-control-150 big-font-120" id="amountNumber">
+        <section class="top-control-80 big-font-120" id="amountNumber">
             <money class="money-icon">￥</money>
             <span id="amountFake" class="bottom-bord-black count-amount">0</span>
             <input id="amount" type="hidden" value="0">
