--- a/app/payDiscuss.html
+++ b/app/payDiscuss.html
@@ -84,9 +84,9 @@
                        <div class="center_box">
                        </div>
                         <div class="right_box text-right">
-                            <img class="pic-small" src="img/timg.jpg">
+                            <!--<img class="pic-small" src="img/timg.jpg">
                             <img class="pic-small" src="img/timg1.jpg">
-                            <img class="pic-small" src="img/timg2.jpg">
+                            <img class="pic-small" src="img/timg2.jpg">-->
                         </div>
                     </div>
                 </div>
