--- a/app/payFail.html
+++ b/app/payFail.html
@@ -13,7 +13,7 @@
     <link type="text/css" href="css/pay.css" rel="stylesheet">
     <meta name="viewport" content="target-densitydpi=device-dpi, width=910px, user-scalable=no">
 </head>
-<body class="container-fluid top-control" onload="slipInit(1)">
+<body class="container-fluid" onload="slipInit(1)">
 <section class="row">
     <div class="col-lg-12">
         <section class="text-center top-control-80">
