--- a/app/paySuccess.html
+++ b/app/paySuccess.html
@@ -40,7 +40,7 @@
                 <div id="slip" class="list-content">
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title-y">$4564</span>
+                            <span class="recommend-box-title">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-3.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
@@ -48,7 +48,7 @@
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title-y">$4564</span>
+                            <span class="recommend-box-title">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-4.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
@@ -56,7 +56,7 @@
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title-y">$4564</span>
+                            <span class="recommend-box-title">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-5.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
@@ -64,7 +64,7 @@
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title-y">$4564</span>
+                            <span class="recommend-box-title">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
@@ -72,7 +72,7 @@
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title-y">$4564</span>
+                            <span class="recommend-box-title">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
@@ -80,7 +80,7 @@
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title-y">$4564</span>
+                            <span class="recommend-box-title">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
@@ -88,7 +88,7 @@
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title-y">$4564</span>
+                            <span class="recommend-box-title">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
@@ -96,7 +96,7 @@
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title-y">$4564</span>
+                            <span class="recommend-box-title">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
@@ -104,7 +104,7 @@
                     </section>
                     <section class="recommend-box">
                         <div class="recommend-box-content">
-                            <span class="recommend-box-title-y">$4564</span>
+                            <span class="recommend-box-title">$4564</span>
                             <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
